<resources>
    <string name="app_name">Craftshub</string>
    <string name="login">Login</string>
    <string name="login_social">______________ Or login with ______________</string>
    <string name="signup">Signup</string>
    <string name="home_name">Hi Dustin</string>
    <string name="home_wish">Have a nice Day</string>
    <string name="home_categories">Categories</string>
    <string name="home_picks">Recommended Picks</string>
    <string name="product_name">Product 01 with full name in title</string>
    <string name="product_price">Rs. 3500</string>
    <string name="product_qty">02 Items</string>
    <string name="product_seller">Seller</string>
    <string name="product_seller_name">Roy Kenly</string>
    <string name="product_seller_reg">01 Dec 2024</string>
    <string name="product_seller_desc">Im Roy Kenly. I sell quality and valuable products.</string>
    <string name="product_similar">Similar Products</string>
    <string name="product_crt_btn">Add to Cart</string>
    <string name="product_buy_btn">Buy Now</string>
    <string name="amount">Amount</string>
    <string name="item_count">Item Count</string>
    <string name="checkout_btn">Checkout</string>
    <string name="delivery">Delivery Details</string>
    <string name="order">Order Details</string>
    <string name="sub_total">Sub Total</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="total">Grand Total</string>
    <string name="place_order">Place Order</string>
    <string name="order_confirm">Your Order is Confirmed!</string>
    <string name="done">Done</string>
    <string name="address">Address</string>
    <string name="address_name">Enter your full name</string>
    <string name="address_line1">Address line 1</string>
    <string name="address_line2">Address line 2</string>
    <string name="address_state">Select State</string>
    <string name="address_city">City</string>
    <string name="address_postalcode">Postal Code</string>
    <string name="save">Save</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_addproduct">Add Product</string>
    <string name="menu_products">My Products</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_selldashboard">SelldashboardActivity</string>

    <string name="web_client_id">YOUR_CLIENT_ID</string>
    <string name="web_clent_secret">YOUR_CLIENT_SECRET</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="back_to_home">Back to Home</string>
</resources>