<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_sdashboard">

    <fragment
        android:id="@+id/nav_sdashboard"
        android:name="com.kavishkasinhabahu.craftshub.ui.sdashboard.SdashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_sdashboard" />

    <fragment
        android:id="@+id/nav_addproduct"
        android:name="com.kavishkasinhabahu.craftshub.ui.addproduct.AddproductFragment"
        android:label="@string/menu_addproduct"
        tools:layout="@layout/fragment_addproduct" />

    <fragment
        android:id="@+id/nav_products"
        android:name="com.kavishkasinhabahu.craftshub.ui.products.ProductsFragment"
        android:label="@string/menu_products"
        tools:layout="@layout/fragment_products" />
</navigation>